discord rpc support

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -212,6 +212,16 @@
             </div>
             <div class="setting-row">
               <div class="setting-info">
+                <span class="setting-label">Discord Rich Presence</span>
+                <span class="setting-desc">Show what you're listening to on Discord</span>
+              </div>
+              <label class="toggle-switch">
+                <input type="checkbox" id="setting-discord-rpc" />
+                <span class="toggle-slider"></span>
+              </label>
+            </div>
+            <div class="setting-row">
+              <div class="setting-info">
                 <span class="setting-label">Audio quality</span>
                 <span class="setting-desc">Higher quality uses more bandwidth</span>
               </div>
