add live performances , fans also like sections to artist page and monthly audience stat for artists

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -431,6 +431,14 @@
           <h2>Music Videos</h2>
           <div id="artist-videos" class="album-scroll"></div>
         </div>
+        <div class="artist-section" id="artist-live-section" style="display:none;">
+          <h2>Live Performances</h2>
+          <div id="artist-live" class="album-scroll"></div>
+        </div>
+        <div class="artist-section" id="artist-fans-section" style="display:none;">
+          <h2>Fans might also like</h2>
+          <div id="artist-fans" class="similar-artists-scroll"></div>
+        </div>
       </section>
     </main>
   </div>
