Add share functionality to copy links for tracks, albums and artists

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -413,6 +413,9 @@
             <svg width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M8 5v14l11-7L8 5z"/></svg>
           </button>
           <button class="follow-btn" id="btn-artist-follow">Follow</button>
+          <button class="follow-btn" id="btn-artist-share" title="Copy link">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
+          </button>
         </div>
         <div class="artist-section" id="artist-about-section" style="display:none;">
           <h2>About</h2>
