add expanded search results: artists, albums, playlists, videos sections
Search now fetches and renders 5 result types in parallel:
- Artists: horizontal circular cards (max 3, top result larger)
- Songs: track list (max 10)
- Albums: horizontal scroll cards with play/click/context menu
- Playlists: horizontal scroll cards with play/click/context menu
- Videos: horizontal scroll cards with landscape thumbnails

New IPC handlers: searchAlbums, searchVideos, searchPlaylists,
getPlaylistVideos. New views: showExternalPlaylistDetail (reuses
album detail view), showPlaylistContextMenu.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -164,7 +164,7 @@
         <div id="search-results" class="track-list">
           <div class="empty-state search-empty">
             <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="#535353" stroke-width="1.5"><circle cx="11" cy="11" r="7"/><path d="M16 16l4.5 4.5" stroke-linecap="round"/></svg>
-            <p>Search for songs, artists, or albums</p>
+            <p>Search for songs, artists, albums, or playlists</p>
           </div>
         </div>
       </section>
