Add experimental tag to Crossfade setting

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -390,7 +390,7 @@
             </div>
             <div class="setting-row">
               <div class="setting-info">
-                <span class="setting-label">Crossfade</span>
+                <span class="setting-label">Crossfade <span class="experimental-tag">EXPERIMENTAL</span></span>
                 <span class="setting-desc">Smoothly transition between songs</span>
               </div>
               <label class="toggle-switch">
