Keep Now Playing fixed while scrolling queue and add scroll-to-top button
  Restructure queue panel layout so only the Up Next / Recently Played
  lists scroll while the Now Playing section stays pinned at the top.
  Add a floating scroll-to-top button that fades in after scrolling down.
  Fix drag-reorder auto-scroll to target the correct scrollable container.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -697,12 +697,15 @@
         <h4>Now Playing</h4>
         <div id="queue-now-playing"></div>
       </div>
-      <div class="queue-section">
+      <div class="queue-section queue-upnext-section">
         <div class="queue-section-header">
           <h4>Up Next</h4>
           <button class="queue-clear-btn" id="btn-clear-queue">Clear</button>
         </div>
         <div id="queue-up-next"></div>
+        <button class="queue-scroll-top" id="queue-scroll-top" title="Back to top">
+          <svg width="14" height="14" viewBox="0 0 16 16"><path d="M3 10l5-5 5 5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"/></svg>
+        </button>
       </div>
     </div>
     <!-- History View -->
@@ -711,12 +714,15 @@
         <h4>Now Playing</h4>
         <div id="history-now-playing"></div>
       </div>
-      <div class="queue-section">
+      <div class="queue-section queue-upnext-section">
         <div class="queue-section-header">
           <h4>Recently Played</h4>
           <button class="queue-clear-btn" id="btn-clear-history">Clear</button>
         </div>
         <div id="history-list"></div>
+        <button class="queue-scroll-top" id="history-scroll-top" title="Back to top">
+          <svg width="14" height="14" viewBox="0 0 16 16"><path d="M3 10l5-5 5 5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"/></svg>
+        </button>
       </div>
     </div>
   </div>
