fix: i18n bug fixes, missing translations, and code deduplication
- Fix missing spotify.selectAtLeastOne key, localStorage locale validation, and fetch error handling in i18n.js
- Replace 16+ hardcoded English strings with I18n.t() calls (search labels, Play/Pause, My Playlist, crossfade seconds, etc.)
- Add mt() interpolation support and IPC locale sync for main process
- Remove 6 unused translation keys, expand onChange to re-render explore view
- Extract startRadio() and getLikedSongsPlaylist() helpers to deduplicate code

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="playlist-info">
               <span class="playlist-name" data-i18n="sidebar.likedSongs">Liked Songs</span>
-              <span class="playlist-count" data-i18n="sidebar.songCount.other">0 songs</span>
+              <span class="playlist-count">0 songs</span>
             </div>
           </div>
         </div>
